--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
         <div class="img-box">
             <img src="baby tone.jpg" alt="">
         </div>
+    </section>
+
+    <section class="about">
+        <div class="about-img">
+            <img src="native.jpg" alt="">
+        </div>
+
+        <div class="about-content">
+            <h2 class="heading">About <span>Me</span></h2>
+            <h3>Frontend <span>Developer</span></h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi eum sint debitis eligendi voluptatem ut est tenetur nihil, libero aliquam, porro nostrum quam deleniti corporis odio officia, vero consectetur laborum?</p>
+            <a href="#" class="btn-2">Experience</a>
+        </div>
 
     </section>
     
