--- a/index.html
+++ b/index.html
@@ -52,8 +52,62 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi eum sint debitis eligendi voluptatem ut est tenetur nihil, libero aliquam, porro nostrum quam deleniti corporis odio officia, vero consectetur laborum?</p>
             <a href="#" class="btn-2">Experience</a>
         </div>
-
     </section>
+
+    <section class="contact-form">
+        <h2 class="contact-me">Contact <span>Me</span></h2>
+
+        <form action="#">
+
+            <div class="input-box">
+                <input type="text" placeholder="FullName">
+                <input type="email" placeholder="Email">
+            </div>
+
+            <div class="input-box">
+                <input type="number" placeholder="Phone number">
+                <input type="text" placeholder="Subject">
+            </div>
+
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            
+            <input type="submit" value="Send Message" class="btn-1">
+            </form>
+    </section>
+
+    <footer class="footer">
+        <div class="social">
+            <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+        </div>
+
+        <ul class="List">
+            <li>
+                <a href="#">FAQ</a>
+            </li>
+
+            <li>
+                <a href="#">Services</a>
+            </li>
+
+            <li>
+                <a href="#">About Me</a>
+            </li>
+
+            <li>
+                <a href="#">Contact</a>
+            </li>
+
+            <li>
+                <a href="#">Privacy Policy</a>
+            </li>
+        </ul>
+
+        <p class="copyright">@ 2024 Mitchell | All Rights Reserved</p>
+
+    </footer>
     
 </body>
 </html>
