--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='style'>
+    
 </head>
 <body>
     <header class="header">
@@ -78,9 +79,8 @@
     <footer class="footer">
         <div class="social">
             <a href="#"><i class='bx bxl-linkedin-square'></i></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
+            <a href="#"><i class='bx bxl-instagram' ></i></a>
+            <a href="#"><i class='bx bxl-twitter' ></i></a>
         </div>
 
         <ul class="List">
