--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
     <footer class="footer">
         <div class="social">
-            <a href="#"><i class='bx bxl-linkedin-square'></i></a>
-            <a href="#"><i class='bx bxl-instagram' ></i></a>
-            <a href="#"><i class='bx bxl-twitter' ></i></a>
+            <img src="bxl-instagram.svg" alt="">
+            <img src="bxl-twitter.svg" alt="">
+            <img src="bxl-linkedin-square.svg" alt="">
         </div>
 
         <ul class="List">
