--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="img-box">
-            <img src="baby tone.jpg" alt="">
+            <img src="native2.jpg" alt="">
         </div>
     </section>
 
