--- a/index.html
+++ b/index.html
@@ -76,6 +76,54 @@
             </form>
     </section>
 
+    <div class="slider">
+        <div class="slide-tracker">
+
+            <div class="slide">
+                <img src="Blockchain Technology.jpg" alt="">
+            </div>
+
+            <div class="slide">
+                <img src="Computer-Programming-Languages.jpg" alt="">
+            </div>
+
+            <div class="slide">
+                <img src="cybersecurity.jpg" alt="">
+            </div>
+
+            <div class="slide">
+                <img src="data science.jpg" alt="">
+            </div>
+
+            <div class="slide">
+                <img src="full-stack-developer.avif" alt="">
+            </div>
+
+            <div class="slide">
+                <img src="Blockchain Technology.jpg" alt="">
+            </div>
+
+            <div class="slide">
+                <img src="Computer-Programming-Languages.jpg" alt="">
+            </div>
+
+            <div class="slide">
+                <img src="cybersecurity.jpg" alt="">
+            </div>
+
+            <div class="slide">
+                <img src="data science.jpg" alt="">
+            </div>
+
+            <div class="slide">
+                <img src="full-stack-developer.avif" alt="">
+            </div>
+
+            
+
+        </div>
+    </div>
+    
     <footer class="footer">
         <div class="social">
             <img src="bxl-instagram.svg" alt="">
